--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -13,7 +13,6 @@
 body {
     height: 100vh;
     background-color: #f5f5dc;
-    overflow: hidden;
 }
 
 .container {
@@ -32,6 +31,10 @@ body {
     display: block;
 }
 
+/*----------------------------------*/
+/*--------------HEADER--------------*/
+/*----------------------------------*/
+
 header {
     height: 17vh;
     overflow: hidden;
@@ -42,12 +45,13 @@ h1 {
     font-family: "Open Sans", sans-serif;
     color: #000;
     width: 20%;
+    font-weight: 700;
 }
 
 h1 span {
     background-color: #006D5D;
     color: #fff;
-    padding: 4.5px;
+    padding: 2px 5px;
     margin-right: 3px;
     border-radius: 5px;
 }
@@ -128,6 +132,244 @@ nav li:hover {
     font-family: "Nunito Sans", sans-serif;
     width: 100%;
     margin-left: 0.2em;
+}
+
+/*----------------------------------*/
+/*----------------MAIN--------------*/
+/*----------------------------------*/
+
+.flexcontent {
+    display: flex;
+    flex-direction: row;
+    margin-top: 2em;
+}
+
+.options-list {
+    width: 20%;
+    background-color: #fff;
+    padding: 1em;
+    border-radius: 1em;
+    height: 20%;
+}
+
+.options-list ul {
+    list-style: none;
+}
+
+.options-list li {
+    font-family: "Popins", sans-serif;
+    font-weight: 600;
+    padding: 10px;
+    cursor: pointer;
+    line-height: 2.5;
+}
+
+.options-list li i {
+    font-size: 1.2em;
+    margin-right: 1em;
+}
+
+.create-post {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    margin: 0 2em;
+}
+
+.content {
+    min-height: 75vh;
+    width: 80%;
+    margin-bottom: 2em;
+}
+
+.post-design {
+    background-color: #fff;
+    min-height: 7em;
+    padding: 0 1em 1em;
+    border-radius: 1em;
+    margin-top: 1em;
+}
+
+.post {
+    margin-top: 0;
+    width: 100%;
+    position: relative;
+}
+
+textarea {
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 500;
+    padding-top: 1.5em;
+    width: 100%;
+    background-color: transparent;
+    resize: none;
+    height: 15em;
+}
+
+.submit-section > input {
+    display: none;
+}
+
+.submit-section {
+    display: flex;
+}
+
+.submit-section label {
+    position: relative;
+    bottom: -10px;
+}
+
+.img-info {
+    position: relative;
+    left: 21px;
+    bottom: -10px;
+    height: 1.2em;
+    width: 10em;
+    overflow: hidden;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 13px;
+}
+
+.login-btn {
+    position: absolute;
+    right: 2em;
+    bottom: 15px;
+    background-color: #006D5D;
+    color: #fff;
+    font-family: "Nunito Sans", sans-serif;
+    padding: 8px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.submit-btn {
+    position: absolute;
+    right: 2em;
+    bottom: 15px;
+    background-color: #006D5D;
+    color: #fff;
+    font-family: "Nunito Sans", sans-serif;
+    padding: 8px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.fa-image {
+    cursor: pointer;
+    font-size: 1.3em;
+}
+
+.post-info {
+    padding-top: 1em;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.post-info>.profile-img {
+    width: 2em;
+    height: 2em;
+}
+
+.post-info p {
+    font-family: "Nunito Sans", sans-serif;
+}
+
+.post-info p:nth-child(2) {
+    margin-left: 5px;
+    font-weight: 800;
+}
+
+.post-info p:nth-child(3) {
+    position: absolute;
+    right: 1em;
+    font-size: 13px;
+}
+
+.post-text {
+    height: 90%;
+    width: 100%;
+    margin-top: 1em;
+}
+
+.post-text p {
+    font-family: "Nunito Sans", sans-serif;
+}
+
+.profile-image {
+    width: 2em;
+    height: 2em;
+    margin-right: 1em;
+    background-image: url('../img/profile-img.webp'); 
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+}
+
+.post-text img {
+    margin-top: 1.5em;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+.new-friends-section {
+    width: 30%;
+}
+
+.friends-info ul {
+    list-style: none;
+    background-color: #fff;
+}
+
+.friends-info li {
+    display: flex;
+    border-bottom: 2px solid #bdb9b9;
+    height: 4.5em;
+}
+
+.friend-img {
+    width: 30%;
+    display: grid;
+    place-items: center;
+}
+
+.friend-img img {
+    width: 3em;
+    height: 3em;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.friend-info-list {
+    position: relative;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.follow-friend-btn {
+    width: 2em;
+    height: 2em;
+    background-color: #006D5D;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    color: #fff;
+    position: absolute;
+    top: 27%;
+    right: 5%;
+    cursor: pointer;
+}
+
+.friend-info-list h3, .friend-job, .friend-company {
+    font-family: "Nunito Sans", sans-serif;
+}
+
+.friend-info-list .friend-job, .friend-company {
+    font-size: 14px;
 }
 
 /*----------------------------------*/
