--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    height: 100vh;
+    height: 99vh;
     background-color: #f5f5dc;
 }
 
@@ -28,7 +28,7 @@ body {
 }
 
 .homepage {
-    display: block;
+    display: none;
 }
 
 /*----------------------------------*/
@@ -318,6 +318,11 @@ textarea {
     width: 30%;
 }
 
+.friends-info {
+    height: 24em;
+    overflow: scroll;
+}
+
 .friends-info ul {
     list-style: none;
     background-color: #fff;
@@ -364,11 +369,15 @@ textarea {
     cursor: pointer;
 }
 
+.friend-job {
+    width: 9em;
+}
+
 .friend-info-list h3, .friend-job, .friend-company {
     font-family: "Nunito Sans", sans-serif;
 }
 
-.friend-info-list .friend-job, .friend-company {
+.friend-job, .friend-company {
     font-size: 14px;
 }
 
@@ -377,14 +386,15 @@ textarea {
 /*----------------------------------*/
 
 .login-page {
-    display: none;
+    display: flex;
     flex-direction: row;
     height: 100%;
 }
 
 .initial-img-login {
-    height: 100%;
+    height: 100vh;
     width: 55%;
+    overflow: hidden;
 }
 
 .initial-img-login img {
@@ -417,7 +427,7 @@ textarea {
     line-height: 1.2em;
 }
 
-.login-form p span {
+.welcome-text p span {
     color: #006D5D;
     font-weight: 800;
     font-size: 1.27em;
@@ -492,12 +502,16 @@ label:nth-child(3) {
 
 .login-advice {
     position: absolute;
-    font-family: "Poppins", sans-serif;
     bottom: 15%;
-    left: 21%;
-    font-size: 1em;
-    color: #ff0000;
+    left: 25%;
     display: none;
+}
+
+.login-advice span {
+    font-family: "Poppins", sans-serif;
+    font-size: 1em;
+    font-weight: 700;
+    color: #ff0000;
 }
 
 .login-advice i {
